--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>shibu-kuttans-playful-adventures</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Shibu Kuttan's Playful Adventures</title>
+    <meta name="description" content="Fun, safe mini-games for kids with levels, rewards, and endless adventures!" />
+    <meta name="author" content="Amal Ahammed" />
 
-    <meta property="og:title" content="shibu-kuttans-playful-adventures" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <!-- Open Graph (Facebook, LinkedIn, etc.) -->
+    <meta property="og:title" content="Shibu Kuttan's Playful Adventures" />
+    <meta property="og:description" content="Play memory match, shape puzzles, counting games, and more!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://amaelahmed.github.io/shibu-kuttans-playful-adventures/my-og-image.jpg" />
+    <meta property="og:url" content="https://amaelahmed.github.io/shibu-kuttans-playful-adventures/" />
 
+    <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@your_twitter_handle" />
+    <meta name="twitter:image" content="https://amaelahmed.github.io/shibu-kuttans-playful-adventures/my-og-image.jpg" />
+
+    <!-- Optional: Favicon -->
+    <link rel="icon" href="favicon.ico" />
   </head>
 
   <body>
