--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
     <meta name="twitter:site" content="@your_twitter_handle" />
     <meta name="twitter:image" content="https://amaelahmed.github.io/shibu-kuttans-playful-adventures/my-og-image.jpg" />
 
-    <!-- Optional: Favicon -->
-    <link rel="icon" href="favicon.ico" />
+    <!-- Favicon REMOVED -->
   </head>
 
   <body>
